Manipulation about any UI/UX and add the content

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       <main class="content">
         <h1>Selamat Datang di Stasiun <span>Roti</span></h1>
         <p>Nikmati berbagai pilihan roti lezat dan sehat untuk sarapan, camilan, atau makanan penutup Anda.</p>
-        <a href="whatsapp://send?phone=6285237545993&text=Permisi, saya ingin beli Tusuk Sate Kencana Yang " class="cta">Lihat Menu</a>
+        <!-- <a href="whatsapp://send?phone=6285237545993&text=Permisi, saya ingin beli Tusuk Sate Kencana Yang " class="cta">Lihat Menu</a> -->
+        <a href="#menu" class="cta">Lihat Menu</a>
       </main>
     </section>
 
@@ -146,7 +147,7 @@
     <!-- Product Section Start -->
     <section class="products" id="products">
       <h2><span>Produk Unggulan</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque harum, voluptatum architecto iure aspernatur eos.</p>
+      <p>Rasakan kelezatan dan keharuman roti segar kami yang dibuat dengan cinta dan keterampilan tangan yang ahli. Setiap gigitan merupakan perpaduan sempurna antara rasa yang lezat, tekstur yang lembut, dan aroma yang menggoda.</p>
 
       <div class="row">
         <div class="product-card">
@@ -166,13 +167,13 @@
               <i data-feather="star" class="star"></i>
               <i data-feather="star" class="star"></i>
             </div>
-            <div class="product-price">IDR 30K <span>IDR 50K</span></div>
+            <div class="product-price">IDR 10K <span>IDR 25K</span></div>
           </div>
         </div>
         <div class="product-card">
           <div class="product-icon">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+            <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
             <img src="img/products/1.jpg" alt="Product" />
@@ -186,7 +187,7 @@
               <i data-feather="star" class="star"></i>
               <i data-feather="star" class="star"></i>
             </div>
-            <div class="product-price">IDR 30K <span>IDR 50K</span></div>
+            <div class="product-price">IDR 15K <span>IDR 30K</span></div>
           </div>
         </div>
         <div class="product-card">
@@ -206,7 +207,7 @@
               <i data-feather="star" class="star"></i>
               <i data-feather="star"></i>
             </div>
-            <div class="product-price">IDR 30K <span>IDR 50K</span></div>
+            <div class="product-price">IDR 20K <span>IDR 50K</span></div>
           </div>
         </div>
       </div>
@@ -219,7 +220,7 @@
     <section id="contact" class="contact">
       <img src="img/brimage.png" width="100%" height="" alt="" />
       <h2><span>Kontak</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, nobis.</p>
+      <p>Kami sangat senang mendengar tanggapan, pertanyaan, atau pesanan dari Anda, Kepuasan pelanggan adalah bahagia kami. Silakan hubungi kami melalui salah satu cara berikut:</p>
 
       <div class="row">
         <iframe
@@ -265,7 +266,7 @@
       </div>
 
       <div class="credit">
-        <p>created by <a href="">Denny Irawan</a>. | &copy; 2023.</p>
+        <p>created by <a href="">Kelompok 5</a>. | &copy; 2023.</p>
       </div>
     </footer>
 
