merubah dan menambah sedikit perubahan pada landing page dan menambahkan file foto yng estetik :)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h1>Selamat Datang di Stasiun <span>Roti</span></h1>
         <p>Nikmati berbagai pilihan roti lezat dan sehat untuk sarapan, camilan, atau makanan penutup Anda.</p>
         <!-- <a href="whatsapp://send?phone=6285237545993&text=Permisi, saya ingin beli Tusuk Sate Kencana Yang " class="cta">Lihat Menu</a> -->
-        <a href="#menu" class="cta">Lihat Menu</a>
+        <a href="#menu" class="cta">Lihat Menu <i data-feather="book-open"></i></a>
       </main>
     </section>
 
@@ -96,7 +96,7 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="img/kopi12.jpg" alt="Tentang Kami" />
+          <img src="img/mengapa.jpg" alt="Tentang Kami" />
         </div>
         <div class="content">
           <h3>Kenapa harus memilih roti kami?</h3>
@@ -119,23 +119,23 @@
 
       <div class="row">
         <div class="menu-card">
-          <img src="img/satetusuk.jpg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-awan.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Roti Awan</h3>
           <p class="menu-card-price">IDR 20K</p>
         </div>
         <div class="menu-card">
-          <img src="img/satetusuk.jpg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-keju.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Roti Keju</h3>
           <p class="menu-card-price">IDR 35K</p>
         </div>
 
         <div class="menu-card">
-          <img src="img/satetusuk.jpg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-keju.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Roti Mandarin</h3>
           <p class="menu-card-price">IDR 25K</p>
         </div>
         <div class="menu-card">
-          <img src="img/satetusuk.jpg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-awan.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Bolu Pisang</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
@@ -156,7 +156,7 @@
             <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
-            <img src="img/products/1.jpg" alt="Product" />
+            <img src="img/products/roti-coklat.jpg" alt="Product" />
           </div>
           <div class="product-content">
             <h3>Roti Coklat</h3>
@@ -176,7 +176,7 @@
             <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
-            <img src="img/products/1.jpg" alt="Product" />
+            <img src="img/products/roti-keju.jpg" alt="Product" />
           </div>
           <div class="product-content">
             <h3>Roti Keju</h3>
@@ -196,7 +196,7 @@
             <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
-            <img src="img/products/1.jpg" alt="Product" />
+            <img src="img/products/roti-pandan.jpg" alt="Product" />
           </div>
           <div class="product-content">
             <h3>Roti Pandan</h3>
