merubah nama judul yang saya buat

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kelompok Web 5</title>
+    <title>Stasiun Roti</title>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -130,12 +130,12 @@
         </div>
 
         <div class="menu-card">
-          <img src="img/products/roti-keju.jpeg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-mandarin.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Roti Mandarin</h3>
           <p class="menu-card-price">IDR 25K</p>
         </div>
         <div class="menu-card">
-          <img src="img/products/roti-awan.jpeg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-pisang.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Bolu Pisang</h3>
           <p class="menu-card-price">IDR 15K</p>
         </div>
@@ -277,10 +277,13 @@
       <div class="modal-container">
         <a href="#"><i data-feather="x" class="close-icon"></i></a>
         <div class="modal-content">
-          <img src="img/products/1.jpg" alt="Product 1" />
+          <img src="img/products/roti-coklat.jpg" alt="Product 1" />
           <div class="product-content">
-            <h3>Product 1</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe ea architecto nisi iusto quod dolorem quo minus repellendus sunt doloremque, aliquid fugiat veniam incidunt soluta!</p>
+            <h3>Roti Coklat</h3>
+            <p>
+              Roti Coklat dengan kombinasi sempurna antara tekstur lembut roti dan rasa coklat yang kaya, roti ini akan memanjakan lidah Anda. Setiap gigitan pada Roti Coklat akan menghadirkan sensasi yang memikat. Dalam setiap suapannya,
+              Anda akan merasakan kelembutan roti yang lezat, dipadu dengan taburan coklat berkualitas tinggi yang meleleh di mulut.
+            </p>
             <div class="product-stars">
               <i data-feather="star"></i>
               <i data-feather="star"></i>
@@ -299,6 +302,7 @@
     <script>
       feather.replace();
     </script>
+
     <!-- My Js -->
     <script src="js/script.js"></script>
   </body>
