Merubah tampilan website dan menambahkan elemen baru di dalam website thanks a God :)

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="product-card">
           <div class="product-icon">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
+            <a href="menu/menu-dua.html"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
             <img src="img/products/roti-coklat.jpg" alt="Product" />
@@ -173,7 +173,7 @@
         <div class="product-card">
           <div class="product-icon">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
+            <a href="menu/menu-tiga.html"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
             <img src="img/products/roti-keju.jpg" alt="Product" />
@@ -193,13 +193,33 @@
         <div class="product-card">
           <div class="product-icon">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye" class="item-detail-button"></i></a>
+            <a href="menu/menu-satu.html"><i data-feather="eye" class="item-detail-button"></i></a>
           </div>
           <div class="product-image">
             <img src="img/products/roti-pandan.jpg" alt="Product" />
           </div>
           <div class="product-content">
             <h3>Roti Pandan</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 20K <span>IDR 50K</span></div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-icon">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="menu/menu-empat.html"><i data-feather="eye" class="item-detail-button"></i></a>
+          </div>
+          <div class="product-image">
+            <img src="img/products/roti-bolu-pisang.jpeg" alt="Product" />
+          </div>
+          <div class="product-content">
+            <h3>Roti Bolu Pisang</h3>
             <div class="product-stars">
               <i data-feather="star" class="star"></i>
               <i data-feather="star" class="star"></i>
