menambahkan satu produk menu unggulan

--- a/index.html
+++ b/index.html
@@ -230,6 +230,46 @@
             <div class="product-price">IDR 20K <span>IDR 50K</span></div>
           </div>
         </div>
+        <div class="product-card">
+          <div class="product-icon">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="menu/menu-lima.html"><i data-feather="eye" class="item-detail-button"></i></a>
+          </div>
+          <div class="product-image">
+            <img src="img/products/bika-ambonbg.jpeg" alt="Product" />
+          </div>
+          <div class="product-content">
+            <h3>Roti Bika Ambon</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+            </div>
+            <div class="product-price">IDR 100K <span>IDR 120K</span></div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-icon">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="menu/menu-enam.html"><i data-feather="eye" class="item-detail-button"></i></a>
+          </div>
+          <div class="product-image">
+            <img src="img/products/brownis-almondbg.jpeg" alt="Product" />
+          </div>
+          <div class="product-content">
+            <h3>Roti Brownis Almond</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+              <i data-feather="star" class="star"></i>
+            </div>
+            <div class="product-price">IDR 80K <span>IDR 95K</span></div>
+          </div>
+        </div>
       </div>
     </section>
 
