--- a/menu/menu-enam.html
+++ b/menu/menu-enam.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
-    <title>Roti Bolu Pisang</title>
+    <title>Roti Bika Ambon</title>
     <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
   <style>
@@ -149,11 +149,11 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <body>
     <section class="menu-details">
-      <h1>Roti Bolu Pisang</h1>
-      <img src="../img/products/roti-bolu-pisang1.jpeg" alt="Roti Pandan" class="menu-image" />
-      <img src="../img/products/roti-bolu-pisang2.jpeg" alt="Roti Pandan" class="menu-image" />
-      <img src="../img/products/roti-bolu-pisang3.jpeg" alt="Roti Pandan" class="menu-image" />
-      <img src="../img/products/roti-bolu-pisang4.jpeg" alt="Roti Pandan" class="menu-image" />
+      <h1>Roti Bika Ambon</h1>
+      <img src="../img/products/brownis-amlond-1.jpeg" alt="Roti Pandan" class="menu-image" />
+      <img src="../img/products/brownis-amlond-2.jpeg" alt="Roti Pandan" class="menu-image" />
+      <img src="../img/products/brownis-amlond-3.jpeg" alt="Roti Pandan" class="menu-image" />
+      <img src="../img/products/brownis-amlond-4.jpeg" alt="Roti Pandan" class="menu-image" />
       <div class="menu-info">
         <div class="product-stars">
           <i data-feather="star" class="star"></i>
@@ -162,12 +162,12 @@
           <i data-feather="star" class="star"></i>
           <i data-feather="star" class="star"></i>
         </div>
-        <p class="price">IDR 20K <span>IDR 50K</span></p>
+        <p class="price">IDR 80K <span>IDR 95K</span></p>
         <p class="description">
-          Roti Bolu Pisang kami adalah paduan sempurna antara cita rasa lembutnya bolu dengan keharuman dan kenikmatan pisang segar. Setiap suapan dari roti ini akan membawa Anda dalam perjalanan rasa yang tak terlupakan. Dibuat dengan
-          cinta oleh para ahli roti kami, roti ini memiliki tekstur lembut dan lezat yang meleleh di mulut. Pisang pilihan yang kami gunakan memberikan kelembutan dan aroma khas yang memanjakan lidah.
+          Roti Brownies Almond adalah kombinasi sempurna antara kelembutan brownies dengan rasa gurih kacang almond yang renyah. Setiap gigitan akan memanjakan lidah Anda dengan sensasi tekstur yang lembut dan kaya rasa. Kami menghadirkan
+          roti ini dengan hati-hati dan menggunakan bahan-bahan terbaik untuk memberikan pengalaman kuliner yang tak terlupakan. Dibuat dengan cinta oleh para ahli roti kami, roti brownies ini memiliki aroma menggoda dan rasa yang lezat.
         </p>
-        <p class="ingredients">Ingredients : Tepung terigu, Pisang matang, Gula, Telur, Mentega, Baking powder, Bubuk kayu manis, Garam</p>
+        <p class="ingredients">Ingredients : Cokelat dark, Mentega, Telur, Gula pasir, Tepung terigu, Bubuk kakao, Baking powder, Garam, Almond panggang, cincang halus</p>
       </div>
     </section>
     <header>
