--- a/menu/menu-lima.html
+++ b/menu/menu-lima.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap" rel="stylesheet" />
-    <title>Roti Bolu Pisang</title>
+    <title>Roti Bika Ambon</title>
     <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
   <style>
@@ -149,11 +149,11 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <body>
     <section class="menu-details">
-      <h1>Roti Bolu Pisang</h1>
-      <img src="../img/products/roti-bolu-pisang1.jpeg" alt="Roti Pandan" class="menu-image" />
-      <img src="../img/products/roti-bolu-pisang2.jpeg" alt="Roti Pandan" class="menu-image" />
-      <img src="../img/products/roti-bolu-pisang3.jpeg" alt="Roti Pandan" class="menu-image" />
-      <img src="../img/products/roti-bolu-pisang4.jpeg" alt="Roti Pandan" class="menu-image" />
+      <h1>Roti Bika Ambon</h1>
+      <img src="../img/products/bika-ambon-1.jpeg" alt="Roti Pandan" class="menu-image" />
+      <img src="../img/products/bika-ambon-2.jpeg" alt="Roti Pandan" class="menu-image" />
+      <img src="../img/products/bika-ambon-3.jpeg" alt="Roti Pandan" class="menu-image" />
+      <img src="../img/products/bika-ambon-4.jpeg" alt="Roti Pandan" class="menu-image" />
       <div class="menu-info">
         <div class="product-stars">
           <i data-feather="star" class="star"></i>
@@ -162,12 +162,12 @@
           <i data-feather="star" class="star"></i>
           <i data-feather="star" class="star"></i>
         </div>
-        <p class="price">IDR 20K <span>IDR 50K</span></p>
+        <p class="price">IDR 100K <span>IDR 120K</span></p>
         <p class="description">
-          Roti Bolu Pisang kami adalah paduan sempurna antara cita rasa lembutnya bolu dengan keharuman dan kenikmatan pisang segar. Setiap suapan dari roti ini akan membawa Anda dalam perjalanan rasa yang tak terlupakan. Dibuat dengan
-          cinta oleh para ahli roti kami, roti ini memiliki tekstur lembut dan lezat yang meleleh di mulut. Pisang pilihan yang kami gunakan memberikan kelembutan dan aroma khas yang memanjakan lidah.
+          Nikmati Kelezatan Roti Bika Ambon yang Menggoda Selera Roti Bika Ambon adalah salah satu hidangan khas Indonesia yang tak boleh dilewatkan. Kami hadirkan bagi Anda kelezatan tradisional yang tak tergantikan dalam setiap suapannya.
+          Roti ini memiliki tekstur kenyal dan lembut yang disempurnakan dengan rasa manis alami dan aroma yang menggoda. Setiap gigitan akan membawa Anda dalam perjalanan rasa yang penuh kelezatan.
         </p>
-        <p class="ingredients">Ingredients : Tepung terigu, Pisang matang, Gula, Telur, Mentega, Baking powder, Bubuk kayu manis, Garam</p>
+        <p class="ingredients">Ingredients : Tepung sagu, Telur, Santan, Gula, Air jeruk nipis, Fermentasi tape singkong, Ragi instan, Pasta pandan (opsional untuk variasi rasa)</p>
       </div>
     </section>
     <header>
