--- a/index.html
+++ b/index.html
@@ -42,26 +42,26 @@
       <!-- Shopping Cart Start -->
       <div class="shopping-cart">
         <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1" />
+          <img src="img/products/bika-ambon-1.jpeg" alt="Product 1" />
           <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30K</div>
+            <h3>Bika Ambon</h3>
+            <div class="item-price">IDR 20K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
         <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1" />
+          <img src="img/products/brownis-amlond-2.jpeg" alt="Product 1" />
           <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30K</div>
+            <h3>Brownis Almond</h3>
+            <div class="item-price">IDR 25K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
         <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1" />
+          <img src="img/products/roti-coklat-3.jpeg" alt="Product 1" />
           <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30K</div>
+            <h3>Roti Coklat</h3>
+            <div class="item-price">IDR 15K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
         </div>
@@ -291,20 +291,20 @@
           class="map"
         ></iframe>
 
-        <form action="">
+        <form action="javascript:void(0)">
           <div class="input-group">
             <i data-feather="user"></i>
-            <input type="text" placeholder="nama" />
+            <input id="name" type="text" placeholder="nama" />
           </div>
           <div class="input-group">
             <i data-feather="mail"></i>
-            <input type="email" placeholder="email" />
+            <input id="email" type="email" placeholder="email" />
           </div>
           <div class="input-group">
             <i data-feather="phone"></i>
             <input type="text" placeholder="no hp" />
           </div>
-          <button type="submit" class="btn">Kirim Pesan</button>
+          <button onclick="sendMessage()" type="button" class="btn">Kirim Pesan</button>
         </form>
       </div>
     </section>
@@ -313,9 +313,10 @@
     <!-- Footer start -->
     <footer>
       <div class="socials">
-        <a href="#"><i data-feather="instagram"></i></a>
-        <a href="#"><i data-feather="twitter"></i></a>
-        <a href="#"><i data-feather="facebook"></i></a>
+        <a href="https://www.instagram.com/"><i data-feather="instagram"></i></a>
+        <a href="https://twitter.com/?lang=id"><i data-feather="twitter"></i></a>
+        <a href="https://id-id.facebook.com/"><i data-feather="facebook"></i></a>
+        <a href="https://www.whatsapp.com/?lang=id"><i data-feather="message-square"></i></a>
       </div>
 
       <div class="links">
