--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- Feather icon -->
     <script src="https://unpkg.com/feather-icons"></script>
+    <!-- Icon title website -->
+    <link rel="icon" href="img/GONE_DENNY-removebg-preview.png" />
   </head>
   <body>
     <!-- Navbar start -->
@@ -316,7 +318,7 @@
         <a href="https://www.instagram.com/"><i data-feather="instagram"></i></a>
         <a href="https://twitter.com/?lang=id"><i data-feather="twitter"></i></a>
         <a href="https://id-id.facebook.com/"><i data-feather="facebook"></i></a>
-        <a href="https://www.whatsapp.com/?lang=id"><i data-feather="message-square"></i></a>
+        <a href="https://wa.me/6285237545993/?text=Hallo!, Saya mau tanya ..."><i data-feather="message-square"></i></a>
       </div>
 
       <div class="links">
