merubah ukuran gambar

--- a/index.html
+++ b/index.html
@@ -121,25 +121,35 @@
 
       <div class="row">
         <div class="menu-card">
-          <img src="img/products/roti-awan.jpeg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-awan-300.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Roti Awan</h3>
           <p class="menu-card-price">IDR 20K</p>
         </div>
         <div class="menu-card">
-          <img src="img/products/roti-keju.jpeg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-keju-300.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Roti Keju</h3>
           <p class="menu-card-price">IDR 35K</p>
         </div>
 
         <div class="menu-card">
-          <img src="img/products/roti-mandarin.jpeg" alt="tusuk" class="menu-card-img" />
-          <h3 class="menu-card-title">Roti Mandarin</h3>
+          <img src="img/products/roti-bolu-pandan-300.jpeg" alt="tusuk" class="menu-card-img" />
+          <h3 class="menu-card-title">Roti Bolu Pandan</h3>
           <p class="menu-card-price">IDR 25K</p>
         </div>
         <div class="menu-card">
-          <img src="img/products/roti-pisang.jpeg" alt="tusuk" class="menu-card-img" />
+          <img src="img/products/roti-pisang-300.jpeg" alt="tusuk" class="menu-card-img" />
           <h3 class="menu-card-title">Bolu Pisang</h3>
           <p class="menu-card-price">IDR 15K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/products/bika-ambonbg-300.jpeg" alt="tusuk" class="menu-card-img" />
+          <h3 class="menu-card-title">Bika Ambon</h3>
+          <p class="menu-card-price">IDR 10K</p>
+        </div>
+        <div class="menu-card">
+          <img src="img/products/brownis-almondbg-300.jpeg" alt="tusuk" class="menu-card-img" />
+          <h3 class="menu-card-title">Brownis Almond</h3>
+          <p class="menu-card-price">IDR 30K</p>
         </div>
       </div>
     </section>
