--- a/menu/menu-enam.html
+++ b/menu/menu-enam.html
@@ -172,7 +172,7 @@
     </section>
     <header>
       <nav>
-        <a href="../index.html">Home</a>
+        <a href="../index.html#products">Home</a>
       </nav>
     </header>
 
