--- a/menu/menu-satu.html
+++ b/menu/menu-satu.html
@@ -173,7 +173,7 @@
     </section>
     <header>
       <nav>
-        <a href="../index.html">Home</a>
+        <a href="../index.html#products">Home</a>
       </nav>
     </header>
 
